--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "main": "lib/simditor.js",
   "homepage": "http://simditor.tower.im",
   "dependencies": {
+    "grunt-parallel": "^0.5.1",
     "jquery": "~2.1.4",
     "simple-hotkeys": "~1.0.3",
     "simple-module": "~2.0.6",
